# provisionsd

./: .gitignore  Cargo.toml  README.md  Rocket.toml  go.mod  go.sum  license.md  systemd.service
.zed/: tasks.json
assets/css/: main.css
cmd/runserver/: main.go
internal/db/: db.go
internal/handlers/: currency.go
internal/templates/: templates.go
internal/templates/html/: auth.html
internal/templates/html/currency/: destroy.html
internal/templates/html/form/: addingredient.html
internal/templates/html/httpcodes/: 404.html  405.html
internal/templates/templates/currency/: destroy.html  show.html
internal/templates/templates/form/currency/: create.html
internal/templates/templates/httpcodes/: 403.html
migrations/: 001.sql
src/: db.rs
templates/: auth.html  base.html  base.tera  login.html
templates/css/: main.css.html
