[package]
name = "provisionsd"
version = "0.1.0"
edition = "2024"
description = ""
# documentation = ""
readme = "README.md"
repository = "https://git.siru.ink/siru/provisionsd"
# license = ""
keywords = ["self-hosting","rocket","grocery-tracker"]
# categories = ""
publish = false

[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
